<resources>
    <string name="app_name" translatable="false">UFLY</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>


    <string name="world_travel">Travel Your World</string>
    <string name="world_travel_desc">Book tickets of any Trip and travel Your world!</string>

    <string name="play_again">Play Again</string>
    <string name="safety">Have fun with UFly </string>
    <string name="login_into_n_your_account">Login into\nyour account</string>
    <string name="your_phone">Phone</string>
    <string name="forget_password">Forget Password ?</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="creat_acc">Create your \n account</string>
    <string name="your_password">Password</string>
    <string name="re_your_password">Re Your Password</string>
    <string name="your_mail">Email</string>
    <string name="your_address">Address</string>
    <string name="your_full_name">Full Name</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="logo">logo</string>
    <string name="departure">DEPARTURE</string>
    <string name="ciro">CAIRO</string>
    <string name="arrival">ARRIVAL</string>
    <string name="alex">ALEXANDRIA</string>
    <string name="date">DATE IN</string>
    <string name="date_ex">Sonday 1/1/2020</string>
    <string name="to_date">DATE OUT</string>
    <string name="passengers">PASSENGERS</string>
    <string name="description">description</string>
    <string name="to">TO</string>
    <string name="from">FROM</string>
    <string name="until">Until</string>
    <string name="mansoura">MANSOURA</string>
    <string name="inclouds">Include</string>
    <string name="book">Book Now</string>
    <string name="trip_information">Trip Information</string>
    <string name="alexandria" translatable="false">Alexandria</string>
    <string name="cairo">Cairo</string>
    <string name="get_out_and_have_fun">Get out and have some fun</string>

    <string name="try_gold_ufly"><font fgcolor='#CCA231'>Try Gold UFly</font></string> <!--gold-->

    <string name="helps">Helps</string>
    <string name="connect_us">Connect Us</string>
    <string name="log_out">Log Out</string>
    <string name="cash">Cash</string>
    <string name="visa">Visa</string>
    <string name="chose_your_payment_pay">choose your payment pay</string>
    <string name="edit">Edite</string>
    <string name="change_pass">Change Your pass..</string>
    <string name="change_email">Change Your Email</string>
    <string name="my_information_account">MY Information Account</string>
    <string name="my_trip">My Trips</string>
    <string name="cancel_the_trip">Cancel the trip</string>
    <string name="monday_01_01_2020">monday 01/01/2020</string>
    <string name="price" translatable="false">price</string>
    <string name="is_paid">I S   P A I D</string>
    <string name="pay_now">PAY NOW</string>
    <string name="register">Register</string>
    <string name="don_t_have_an_account_yet">Don\'t have an account yet?</string>
    <string name="paid">Paid</string>
    <string name="not_paid">Not Paid</string>
    <string name="my_account">My Account</string>
    <string name="don">Done</string>
    <string name="tag_home">home</string>
    <string name="tag_setting">setting</string>
    <string name="tag_mytrip">mytrip</string>
    <string name="tag_sign_up">signup</string>
    <string name="tag_login">login</string>
    <string name="tag_my_account">myaccount</string>
    <string name="tag_book">book</string>
    <string name="tag_desc">descreption</string>
    <string name="tag_login_company">login_company</string>
    <string name="login_company">Login Company</string>
    <string name="inter_your_company_id">Inter Your Company id</string>
    <string name="add_price">Add Price</string>
    <string name="general">General</string>
    <string name="add_trip">Add Trip</string>
    <string name="tag_hom_company">homecompany</string>
    <string name="tag_setting_company">settingCompany</string>
    <string name="tag_add_trip">add_trip</string>
    <string name="tag_books_comp">books_company</string>
    <string name="trip_info">Trip Info</string>
    <string name="passenger_info">Passenger Info</string>
    <string name="try_again">Pleas Try Again Later</string>
    <string name="number_passenger">Number Of Passengers \n and price</string>
    <string name="this_trip_has_no_passengers_yet">this Trip has no Passengers yet</string>
    <string name="booked">BOOKED</string>
    <string name="available_chair">AVAILABLE</string>
    <string name="complete">COMPLETE</string>
    <string name="time_in">TIME IN</string>
    <string name="time_out">TIME OUT</string>
    <string name="refresh">REFRESH</string>
    <string name="you_don_t_have_any_trip_now_n_try_do_add_on">you don\'t have any trip now \n try to add one</string>
    <string name="no_trip_now">NO TRIPS  RIGHT NOW</string>
    <string name="tag_my_account_company" translatable="false">tagcompanyaccount</string>
    <string name="no_trip_booked">there are no Trips booked yet</string>
    <string name="cleck_To_book">click here to book a Trip</string>

    <string name="tag_pay_qr">tag_pay_qr</string>
    <string name="wrong_qr_code">Wrong QR Code</string>
    <string name="number_passenger_">Number of Passengers</string>
    <string name="price_">Price</string>
    <string name="sk_id" translatable="false">9pfpbnaxshV3XhBtXX66TXRiQ97aAydJYs9aQjIjADnyVY2TW90P6R8X0g7APlkOOuYENHXoklXgjZ9g895e0ec0vjBkEV8tp77d</string>
    <string name="myemail" translatable="false">abd_allah_kshaf@icloud.com</string>
    <string name="egp" translatable="false">EGP</string>
    <string name="search_by_your_city">SEARCH BY YOUR CITY</string>
    <string name="content_description_base_dialog_icon" translatable="false">content_description_base_dialog_icon</string>
    <string name="no_intrnet">NO INTERNET</string>
    <string name="emailverification">email verification</string>
    <string name="email_verification">EMAIL VERIFICATION</string>
    <string name="enter_your_verification_id">ENTER YOUR VERIFICATION</string>
    <string name="check">CHECK</string>
    <string name="wrong_code">WRONG CODE</string>
    <string name="please_enter_a_valid_code">PLEASE ENTER A VALID CODE CONTAIN 6 NUMBERS</string>
    <string name="reSend">Re Send The Code</string>
    <string name="chang_your_mail_first">YOU SHOULD CHANGE YOUR EMAIL FIRST  /n  THEN RE SEND YOUR EMAIL </string>
    <string name="no_result">NO RESULT</string>
    <string name="dateh" translatable="false">00/00/0000</string>
    <string name="passengers_booked">PASSENGERS BOOKED</string>
    <string name="chose_your_trip">CHOOSE YOUR TRIP</string>
    <string name="have_any_q">HAVE ANY QUESTION ? CLICK HERE !</string>
    <string name="title_activity_my_trips" translatable="false">MyTripsActivity</string>

    <string name="my_complet_trips">Complet Trips</string>
    <string name="my_panding_trips">Panding Trips</string>
    <string name="my_old_trips">Old Trips</string>
    <string name="add_comment">Add Comment</string>
    <string name="delete">Delete</string>
    <string name="wrong_date">Wrong Date</string>
    <string name="suggestions">Suggestions</string>


</resources>
