<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/nav_info_person"
        android:enabled="true"
        android:icon="@drawable/ic_settings_black_24dp"
        android:title="@string/action_settings"
        app:showAsAction="ifRoom"

        />
<item
        android:id="@+id/nav_home"
        android:enabled="true"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/menu_home"
        app:showAsAction="ifRoom"

        />
<item
        android:id="@+id/nav_mytrips"
        android:enabled="true"
        android:icon="@drawable/ic_account_balance_wallet_black_24dp"
        android:title="@string/my_trip"
        app:showAsAction="ifRoom"

        />



</menu>