<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_margin="@dimen/_18"
    android:layout_height="@dimen/_350">

<androidx.cardview.widget.CardView
    android:orientation="vertical"
   app:cardBackgroundColor="@color/trans3"
    app:cardCornerRadius="@dimen/_30"
    android:layout_width="match_parent"
    android:layout_margin="@dimen/_18"
    android:layout_height="@dimen/_350">



    <androidx.cardview.widget.CardView

        android:id="@+id/card"
        app:cardCornerRadius="@dimen/_30"
       app:cardBackgroundColor="@color/trans2"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_280">



        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:id="@+id/layout_dep"
                android:layout_marginTop="@dimen/_30"
                android:layout_marginStart="@dimen/_18"
                android:layout_width="@dimen/_150"
                android:layout_height="wrap_content">


                <TextView
                    android:gravity="center"
                    android:id="@+id/depar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/departure"
                    android:textColor="@color/dark"
                    android:textSize="@dimen/_18s"
                    />



                <TextView
                    android:layout_marginTop="@dimen/_4"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:layout_below="@+id/depar"
                    android:id="@+id/tv_departure"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/ciro"
                    android:textColor="@color/yalow"
                    android:textSize="@dimen/_20s"
                    />

            </RelativeLayout>


            <RelativeLayout


                android:layout_toEndOf="@+id/layout_dep"
                android:id="@+id/layout_arr"
                android:layout_marginTop="@dimen/_30"
                android:layout_marginStart="@dimen/_24"
                android:layout_width="@dimen/_150"
                android:layout_height="wrap_content">


                <TextView
                    android:gravity="center"
                    android:id="@+id/arr"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/arrival"
                    android:textColor="@color/dark"
                    android:textSize="@dimen/_18s"
                    />



                <TextView
                    android:layout_marginTop="@dimen/_4"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:layout_below="@+id/arr"
                    android:id="@+id/tv_arrival"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/alex"
                    android:textColor="@color/yalow"
                    android:textSize="@dimen/_20s"
                    />

            </RelativeLayout>


            <TextView
                android:id="@+id/line_one"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/dark"
                android:layout_below="@+id/layout_dep"
                android:layout_marginTop="@dimen/_14"
                android:layout_marginStart="@dimen/_24"
                android:layout_marginEnd="@dimen/_24"
                />


            <RelativeLayout
                android:layout_below="@+id/line_one"
                android:id="@+id/layout_date_from"
                android:layout_marginTop="@dimen/_18"
                android:layout_marginStart="@dimen/_18"
                android:layout_width="@dimen/_150"
                android:layout_height="wrap_content">


                <TextView
                    android:gravity="center"
                    android:id="@+id/f_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/date"
                    android:textColor="@color/dark"
                    android:textSize="@dimen/_18s"
                    />



                <TextView
                    android:layout_marginTop="@dimen/_4"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:layout_below="@+id/f_date"
                    android:id="@+id/tv_data"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/date_ex"
                    android:textColor="@color/dot_dark_screen1"
                    android:textSize="@dimen/_14s"
                    />

            </RelativeLayout>


            <RelativeLayout


                android:layout_below="@+id/line_one"
                android:layout_toEndOf="@+id/layout_date_from"
                android:id="@+id/layout_to_date"
                android:layout_marginTop="@dimen/_18"
                android:layout_marginStart="@dimen/_24"
                android:layout_width="@dimen/_150"
                android:layout_height="wrap_content">


                <TextView
                    android:gravity="center"
                    android:id="@+id/to_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/to_date"
                    android:textColor="@color/dark"
                    android:textSize="@dimen/_18s"
                    />



                <TextView
                    android:layout_marginTop="@dimen/_4"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:layout_below="@+id/to_date"
                    android:id="@+id/tv_to_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/date_ex"
                    android:textColor="@color/dot_dark_screen1"
                    android:textSize="@dimen/_14s"
                    />

            </RelativeLayout>

<TextView
            android:id="@+id/line_tow"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/dark"
            android:layout_below="@+id/layout_date_from"
            android:layout_marginTop="@dimen/_18"
            android:layout_marginStart="@dimen/_24"
            android:layout_marginEnd="@dimen/_24"
            />

            <RelativeLayout
                android:layout_below="@+id/line_tow"
                android:id="@+id/layout_passengers"
                android:layout_marginTop="@dimen/_24"
                android:layout_marginStart="@dimen/_18"
                android:layout_width="@dimen/_150"
                android:layout_height="wrap_content">


                <TextView
                    android:gravity="center"
                    android:id="@+id/passengers"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/passengers"
                    android:textColor="@color/dark"
                    android:textSize="@dimen/_20s"
                    />



                <TextView
                    android:layout_marginStart="@dimen/_40"
                    android:drawablePadding="@dimen/_8"
                    android:drawableStart="@drawable/ic_person_add_24px"
                    android:layout_marginTop="@dimen/_4"
                    android:textStyle="bold"
                    android:layout_below="@+id/passengers"
                    android:id="@+id/tv_nu_passengers"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="50"
                    android:textColor="@color/dark"
                    android:textSize="@dimen/_20s"
                    />

            </RelativeLayout>


            <RelativeLayout


                android:layout_below="@+id/line_tow"
                android:layout_toEndOf="@+id/layout_passengers"
                android:id="@+id/layout_price"
                android:layout_marginTop="@dimen/_30"
                android:layout_marginStart="@dimen/_24"
                android:layout_width="@dimen/_150"
                android:layout_height="wrap_content">


                <TextView

                    android:layout_marginStart="@dimen/_40"
                    android:drawableEnd="@drawable/ic_mony"
                    android:drawablePadding="@dimen/_8"
                    android:id="@+id/price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="150"
                    android:textStyle="bold"
                    android:textColor="@color/dark"
                    android:textSize="@dimen/_28s"
                    />





            </RelativeLayout>



        </RelativeLayout>








    </androidx.cardview.widget.CardView>



</androidx.cardview.widget.CardView>


    <Button
        android:layout_marginBottom="@dimen/_16"
        android:textColor="@color/white"
        android:text="@string/description"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_width="@dimen/_150"
        android:background="@drawable/custom_button_drawable2"
        android:layout_height="@dimen/_35"/>

</RelativeLayout>